tests/spec/emit/snapshots/doc_comment_on_type_alias.snap
---
source: tests/spec/emit/types.rs
description: |
  
  /// A unique identifier for a user.
  type UserId = int
---
package main

// A unique identifier for a user.
type UserId = int
