tests/spec/emit/snapshots/double_newtype_direct_assignment.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct A(int)
  struct B(A)
  
  fn main() {
    let mut w = B(A(1))
    w = B(A(2))
  }
---
package main

type A int

type B A

func main() {
	_ = B(A(1))
	_ = B(A(2))
}
