tests/spec/emit/snapshots/double_newtype_nested_field_assignment.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Inner { x: int }
  struct A(Inner)
  struct B(A)
  
  fn main() {
    let mut w = B(A(Inner { x: 1 }))
    let mut inner = w.0.0
    inner.x = 2
    w = B(A(inner))
  }
---
package main

type Inner struct {
	x int
}

type A Inner

type B A

func main() {
	w := B(A(Inner{x: 1}))
	inner := Inner(A(w))
	inner.x = 2
	w = B(A(inner))
}
