tests/spec/emit/snapshots/eager_defaults_preserve_numeric_types.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn shifted(sh: uint64) -> uint64 {
    strconv.ParseUint("bad", 10, 64).unwrap_or(1 << sh)
  }
  
  fn negative() -> int64 {
    strconv.ParseInt("bad", 10, 64).unwrap_or(-1)
  }
  
  fn main() {
    if shifted(63) != 9223372036854775808 || negative() != -1 { panic("wrong default") }
  }
---
package main

import "strconv"

func shifted(sh uint64) uint64 {
	ret, err := strconv.ParseUint("bad", 10, 64)
	default_1 := uint64(1 << sh)
	if err != nil {
		ret = default_1
	}
	return ret
}

func negative() int64 {
	ret, err := strconv.ParseInt("bad", 10, 64)
	if err != nil {
		ret = -1
	}
	return ret
}

func main() {
	if shifted(63) != 9223372036854775808 || negative() != -1 {
		panic("wrong default")
	}
}
