tests/spec/emit/snapshots/early_return.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(x: int) -> int {
    if x < 0 {
      return 0;
    }
    x * 2
  }
---
package main

func test(x int) int {
	if x < 0 {
		return 0
	}
	return x * 2
}
